src/test/ui/hr-subtype/placeholder-pattern-fail.stderr
error[E0308]: mismatched types
  --> $DIR/placeholder-pattern-fail.rs:9:47
   |
LL |     let _: for<'a, 'b> fn(Inv<'a>, Inv<'b>) = sub;
   |                                               ^^^ one type is more general than the other
   |
   = note: expected fn pointer `for<'a, 'b> fn(Inv<'a>, Inv<'b>)`
              found fn pointer `for<'a> fn(Inv<'a>, Inv<'a>)`

error[E0308]: mismatched types
  --> $DIR/placeholder-pattern-fail.rs:14:31
   |
LL |     let _x: (&'static i32,) = x;
   |                               ^ lifetime mismatch
   |
   = note: expected tuple `(&'static i32,)`
              found tuple `(&'c i32,)`
note: the lifetime `'c` as defined here...
  --> $DIR/placeholder-pattern-fail.rs:13:12
   |
LL | fn simple1<'c>(x: (&'c i32,)) {
   |            ^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/placeholder-pattern-fail.rs:19:30
   |
LL |     let _: (&'static i32,) = x;
   |                              ^ lifetime mismatch
   |
   = note: expected tuple `(&'static i32,)`
              found tuple `(&'c i32,)`
note: the lifetime `'c` as defined here...
  --> $DIR/placeholder-pattern-fail.rs:18:12
   |
LL | fn simple2<'c>(x: (&'c i32,)) {
   |            ^^
   = note: ...does not necessarily outlive the static lifetime

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
